<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:background="@drawable/border"
        android:id="@+id/onlineGameViewContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/playBot">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="@string/play_online"
            app:layout_constraintBottom_toTopOf="@+id/hostNameInput"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/onlineLoaderView"
            app:layout_constraintTop_toTopOf="parent"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onlineLoaderView"
            app:layout_constraintBottom_toTopOf="@+id/hostNameInput"
            app:layout_constraintLeft_toRightOf="@id/title"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/hostNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hostname_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="15dp"
            android:text="192.168.1.2"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toTopOf="@id/portInput"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/portInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/port_hint"
            android:inputType="number"
            android:maxLines="1"
            android:padding="15dp"
            android:text="8080"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/hostNameInput"
            app:layout_constraintBottom_toTopOf="@id/createRoom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_room"
            android:id="@+id/createRoom"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/joinRoom"
            app:layout_constraintTop_toBottomOf="@id/portInput"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_room"
            android:id="@+id/joinRoom"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createRoom"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playBot"
        android:text="@string/play_bot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/botLoaderView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onlineGameViewContainer"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botLoaderView"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@id/playBot"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onlineGameViewContainer"/>

</androidx.constraintlayout.widget.ConstraintLayout>